--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
     <div class="magic" style="margin-bottom: 100px"></div>
 
     <footer class="footer navbar-inverse navbar-fixed-bottom" data-role="footer">
-        <p style="text-align:center;margin-top:15px;color:#979797">If you have any questions feel free to email <a href="mailto:alexandrabelleny@gmail.com">Mistress Sun</a> or <a href="mailto:dina.satti@gmail.com@gmail.com">Mistress Mercury</a></p>
+        <p style="text-align:center;margin-top:15px;color:#979797">If you have any questions feel free to email <a href="mailto:cyclingharmony@gmail.com">The Fire Keeper</a></p>
     </footer><!-- /footer -->
 
 </body>
