--- a/public/index.html
+++ b/public/index.html
@@ -146,10 +146,10 @@
 </head>
 <body>
 
-    <div class="magic" style="margin-bottom: 100px"></div>
+    <div class="magic" style="margin-bottom:100px"></div>
 
     <footer class="footer navbar-inverse navbar-fixed-bottom" data-role="footer">
-        <p style="text-align:center;margin-top:15px;color:#979797">If you have any questions feel free to email <a href="mailto:alexandrabelleny@gmail.com">Mistress Sun</a> or <a href="mailto:dina.satti@gmail.com@gmail.com">Mistress Mercury</a></p>
+        <p style="text-align:center;color:#000000">If you have any questions feel free to contact <a href="mailto:afrikatembo@gmail.com">afrikatembo@gmail.com</a></p>
     </footer><!-- /footer -->
 
 </body>
