changed facebook og references

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
   <title>Afrika Tembo</title>
   <meta name="description" content="Backbone.js and Require.js Boilerplate Library">
   <meta property="og:url" content="https://afrikatembo.org">
-  <meta property="og:title" content="Afrika Tembo">
-  <meta property="og:description" content="A documentary project by visual anthropologist Carolina Caffé and documentary photographer Fernanda Lenz">
-  <meta property="og:image" content="https://afrikatembo.org/img/AFRIKATEMBO_BACKGROUNDPICTURE-2.jpg">
+  <meta property="og:title" content="AFRIKA TEMBO">
+  <meta property="og:description" content="Join the fight to save African Elephants!">
+  <meta property="og:image" content="https://afrikatembo.org/img/fernanda_elefante.jpg">
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
