--- a/public/index.html
+++ b/public/index.html
@@ -148,8 +148,8 @@
 
     <div class="magic" style="margin-bottom: 100px"></div>
 
-    <footer class="footer navbar-inverse navbar-fixed-bottom" data-role="footer">
-        <p style="text-align:center;margin-top:15px;color:#979797">If you have any questions feel free to email <a href="mailto:moonskylar@gmail.com">Jani Moon</a></p>
+    <footer class="footer navbar-inverse navbar-bottom" data-role="footer">
+        <p style="text-align:center;margin-top:15px;margin-bottom:0;padding-bottom: 15px;padding-top: 10px;color:#979797">If you have any questions feel free to email <a href="mailto:moonskylar@gmail.com">Jani Moon</a></p>
     </footer><!-- /footer -->
 
 </body>
